# til-23-finals

./: .gitignore  .gitmodules  README.md  env.sh  pyproject.toml  requirements-no-sdk.txt  requirements.txt  speaker_id.ipynb
cfg/: autonomy_cfg.yml  scoring_cfg.yml  sim_autonomy.yml  sim_cfg.yml
stubs/: abstract_ai_services.py  autonomy_starter.py  blob.py  digit_service.py  distMaps.ipynb  manual_robot.py  mock_ai_services.py  navigation.py  planner.py  reid_service.py  speaker_service.py
til_23_finals/: __init__.py  __main__.py  ai.py  autonomy_starter.py  blob.py  digit_service.py  emulate.py  manual_robot.py  mock_ai_services.py  navigation.py  navigation2.py  planner.py  planner2.py  reid_service.py  scale_measurements.csv  speaker_service.py  tests.py  types.py  utils.py  voice.py
til_23_finals/services/: __init__.py  abstract.py  abstract_ai_services.py  digit.py  digit_service.py  mock.py  mock_ai_services.py  reid.py  reid_service.py  speaker.py  speaker_hack.py  speaker_service.py
